--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.synopsys.polaris.sigdemo</groupId>
-	<artifactId>insecure-bank</artifactId>
+	<artifactId>zq-insecure-bank-01</artifactId>
 	<version>1.0.1</version>
 	<packaging>war</packaging>
 	<name>Insecure Bank</name>
